syntax = "proto3";

package com.midzuhara.roadmapos.grpc;

option java_multiple_files = true;
option java_package = "com.midzuhara.roadmapos.grpc";

// Сервис валидации
service GraphValidatorService {
  // Главный метод: принимает граф, возвращает статус
  rpc ValidateGraph (GraphRequest) returns (ValidationResponse);
}

// Данные графа
message GraphRequest {
  repeated EdgePair edges = 1; // Список всех ребер
}

// Одно ребро (откуда -> куда)
message EdgePair {
  int64 source_id = 1;
  int64 target_id = 2;
}

// Ответ
message ValidationResponse {
  bool is_valid = 1;      // true - циклов нет, false - цикл есть
  string error_message = 2; // Если false, тут описание ошибки
}